background image change

--- a/templates/sales/report.html.twig
+++ b/templates/sales/report.html.twig
@@ -59,11 +59,11 @@
                     <tr>
                         <td></td>
                         <td></td>
-                        <td class="float-right bg-danger" style="color: white">Total:</td>
+                        <td class="float-right bg-danger" >Total:</td>
 
                         {% for saleCount in salesCount %}
 
-                        <td class="bg-danger" style="color: white">{{ saleCount.subCount }} TK.</td>
+                        <td class="bg-danger">{{ saleCount.subCount }} TK.</td>
 
                         {% endfor %}
                     </tr>
