--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
     {% endblock %}
 
 </head>
-<body background="{{ asset('image/sakura.png') }}">
+<body background="{{ asset('image/criss-cross.png') }}">
 <nav class="navbar navbar-expand-lg navbar-light nav-col">
 
     <a class="navbar-brand" href="{{ url('admin_dashboard') }}" style="color:white">Invoice Management</a>
