--- a/templates/home-base.html.twig
+++ b/templates/home-base.html.twig
@@ -17,7 +17,7 @@
     {% endblock %}
 
 </head>
-<body background="{{ asset('image/sakura.png') }}">
+<body background="{{ asset('image/criss-cross.png') }}">
 <nav class="navbar navbar-expand-lg navbar-light nav-col">
 
     <a class="navbar-brand" href="{{ url('app_login') }}" style="color:white">Invoice Management</a>
