--- a/templates/invoice/show.html.twig
+++ b/templates/invoice/show.html.twig
@@ -8,8 +8,7 @@
         <div class="toolbar hidden-print">
             <div class="text-right">
                 <button id="printInvoice" class="btn btn-danger"><i class="fa fa-print"></i> Print</button>
-
-                <a href="{{ url('pdf', {'id': invoice.id}) }}" class="btn btn-danger"><i class="fa fa-file-pdf-o"></i> Export as PDF</a>
+                <a href="{{ url('pdf', {'id': invoice.id}) }}" class="btn btn-danger" target="_blank"><i class="fa fa-file-pdf-o"></i> Export as PDF</a>
             </div>
             <hr>
         </div>
@@ -96,6 +95,7 @@
             <div></div>
         </div>
     </div>
+
 {% endblock %}
 
 {% block javascripts %}
